# parallel-for-transformer

./: CMakeLists.txt  build.sh  clang5.dockerfile
cmake-modules/: FindClang.cmake  FindLLVM.cmake
scripts/: apply-to-all-TUs-find-multi.pl  apply-to-all-TUs-headers.pl  apply-to-all-TUs.pl  find-multi-fence.pl  remove-multi-fence-all-files.pl  remove-multi-fence.pl
src/: #transform.cc#  .#transform.cc  qualified_name.h  test.cc  transform.cc
